@@ -139,10 +139,18 @@
 
 # If persistence is enabled, save the in-memory database to disk 
 # every autosave_interval seconds. If set to 0, the persistence 
-# database will only be written when mosquitto exits.
+# database will only be written when mosquitto exits. See also
+# autosave_on_changes.
 # Note that writing of the persistence database can be forced by 
 # sending mosquitto a SIGUSR1 signal.
 #autosave_interval 1800
+
+# If true, mosquitto will count the number of subscription changes, retained
+# messages received and queued messages and if the total exceeds
+# autosave_interval then the in-memory database will be saved to disk.
+# If false, mosquitto will save the in-memory database to disk by treating
+# autosave_interval as a time in seconds.
+#autosave_on_changes false
 
 # Save persistent message data to disk (true/false).
 # This saves information about all messages, including 
